--- a/style.css
+++ b/style.css
@@ -62,10 +62,12 @@ body{
     height: 50%;
     flex-wrap: wrap;
     justify-content: center;
-    align-content: flex-start
+    align-content: flex-start;
+    border: 1px solid red;
 }
 
 .enemy-ship {
+    position: relative;
     background-image: url('assets/enemy_ship.png');
     background-position: center;
     background-repeat: no-repeat;
@@ -74,7 +76,6 @@ body{
     height: 38px; /* Height from GameConfig */
     margin: 4px; /* Margin from GameConfig */
     transform: scale(1); /* Adjust scale if needed */
-    
     /* Add a drop-shadow filter */
 }
 
